# openfst

./: CMakeLists.txt  README  README.md  read.cc
arcsort/: fstarcweightsort.cc
lpm/: find_prohibited.py
matcher/: test_matcher.cc
phi_compose/: README.md  acoustic.txt  ascii.syms  fstphicompose.cc  ifst.txt  input.txt  ofst.txt  output.txt  phi_compose.cc
rho_compose/: ifst.txt  ofst.txt  rho_compose.cc
tlg/: README.md  corpus.txt  create_t.py
